test/mutation_analysis/s1021_remove_outermost_parentheses/hafis/starchat/mutants/20/result.txt
./test/mutation_analysis/s1021_remove_outermost_parentheses/hafis/starchat/mutants/20/Solution.java:38: verify: The prover cannot establish an assertion (Postcondition: ./test/mutation_analysis/s1021_remove_outermost_parentheses/hafis/starchat/mutants/20/Solution.java:15:) in method removeOuterParentheses
        return sb.toString();
        ^
./test/mutation_analysis/s1021_remove_outermost_parentheses/hafis/starchat/mutants/20/Solution.java:15: verify: Associated declaration: ./test/mutation_analysis/s1021_remove_outermost_parentheses/hafis/starchat/mutants/20/Solution.java:38:
//@ ensures((s.equals("()()")) ==> (\result.equals("")));
    ^
./test/mutation_analysis/s1021_remove_outermost_parentheses/hafis/starchat/mutants/20/Solution.java:38: verify: The prover cannot establish an assertion (Postcondition: ./test/mutation_analysis/s1021_remove_outermost_parentheses/hafis/starchat/mutants/20/Solution.java:14:) in method removeOuterParentheses
        return sb.toString();
        ^
./test/mutation_analysis/s1021_remove_outermost_parentheses/hafis/starchat/mutants/20/Solution.java:14: verify: Associated declaration: ./test/mutation_analysis/s1021_remove_outermost_parentheses/hafis/starchat/mutants/20/Solution.java:38:
//@ ensures((s.equals("(()())(())")) ==> (\result.equals("()()()")));
    ^
error: An error while executing a proof script for removeOuterParentheses: (error "Solver has unexpectedly terminated")
1 error
4 verification failures
